# turbofan

./: .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  LICENSE  README.md  UPGRADING.md  docker-compose.localstack.yml  turbofan.gemspec
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: external-dependencies.md
examples/config/: production.yml  staging.yml
examples/schemas/: hello_polyglot.json
exe/: turbofan
lib/: turbofan.rb
lib/turbofan/: cli.rb  compute_environment.rb  configuration.rb  dag.rb  deploy.rb  deprecations.rb  discovery.rb  errors.rb  extensions.rb  instance_catalog.rb  instance_selector.rb  naming.rb  pipeline.rb  resource.rb  retryable.rb  router.rb  runtime.rb  s3_uri.rb  status.rb  step.rb  subprocess.rb  version.rb
python/: README.md  pyproject.toml
python/tests/: conftest.py  test_context.py  test_fan_out.py  test_import_smoke.py  test_input_resolver.py  test_lineage.py  test_logger.py  test_metrics.py  test_output_serializer.py  test_payload_deserialize.py  test_payload_serialize.py  test_retryable.py  test_schema_validator.py  test_step_metrics.py  test_wrapper.py
python/tests/fixtures/schemas/: sample_input.json  sample_output.json
python/tests/integration/: test_hello_python_e2e.py  test_ruby_python_equivalence.py
python/turbofan_runtime/: __init__.py  context.py  errors.py  fan_out.py  input_resolver.py  lineage.py  logger.py  metrics.py  output_serializer.py  payload.py  retryable.py  schema_validator.py  step_metrics.py  wrapper.py
spec/: spec_helper.rb
spec/support/: dag_builders.rb  (+1 more)
(+232 files in other folders)
