[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "turbofan-runtime"
version = "0.8.0"
description = "Python runtime contract for Turbofan polyglot steps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dataplor" }]
dependencies = [
  "jsonschema>=4.21,<5",
  "boto3>=1.34,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "moto[s3,cloudwatch,secretsmanager,logs]>=5.0",
]

[project.urls]
Homepage = "https://github.com/dataplor/turbofan"
Source = "https://github.com/dataplor/turbofan/tree/main/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["turbofan_runtime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
